--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #595959;
+		background: #ffffff;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2617,8 +2617,8 @@ input, select, textarea {
 					width: 100%;
 					height: 100%;
 					opacity: 1.0;
-					z-index: 1;
-					opacity: 0.8;
+					z-index: 0;
+					opacity: 0.1;
 				}
 
 				.tiles article > .image:after {
@@ -2638,7 +2638,7 @@ input, select, textarea {
 					background-position: center;
 					background-repeat: no-repeat;
 					background-size: 100% 100%;
-					opacity: 0.25;
+					opacity: 0.5;
 					z-index: 2;
 				}
 
