--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,13 @@ input, select, textarea {
 	}
 
 	body {
-		background: #ffffff;
+		/*background: #ffffff;*/
+		background-image: url('images/chaotic_sphere.gif');
+		background-repeat: repeat;
+		background-size: cover;
+    height: 100vh;
+    padding:0;
+    margin:0;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2354,7 +2360,7 @@ input, select, textarea {
 
 		.image.main {
 			display: block;
-			margin: 0 0 3em 0;
+			margin: 0 0 0 0;
 			width: 100%;
 		}
 
@@ -2617,7 +2623,7 @@ input, select, textarea {
 					width: 100%;
 					height: 100%;
 					opacity: 1.0;
-					z-index: 0;
+					z-index: 2;
 					opacity: 0.1;
 				}
 
@@ -2634,7 +2640,7 @@ input, select, textarea {
 					left: 0;
 					width: 100%;
 					height: 100%;
-					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 0.25px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='100' y2='100' /%3E%3Cline x1='100' y1='0' x2='0' y2='100' /%3E%3C/svg%3E");
+					/*background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 0.25px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='100' y2='100' /%3E%3Cline x1='100' y1='0' x2='0' y2='100' /%3E%3C/svg%3E");*/
 					background-position: center;
 					background-repeat: no-repeat;
 					background-size: 100% 100%;
