--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,13 +99,18 @@ input, select, textarea {
 	}
 
 	body {
-		/*background: #ffffff;*/
-		background-image: url('images/chaotic_sphere.gif');
-		background-repeat: repeat;
-		background-size: cover;
-    height: 100vh;
-    padding:0;
-    margin:0;
+		background: #000000;
+		background-image:url('https://www.thisiscolossal.com/wp-content/uploads/2018/04/agif2opt.gif');
+
+		/*background-image:url('https://www.thisiscolossal.com/wp-content/uploads/2018/04/agif3opt.gif');*/
+		/*background-image:url('https://www.thisiscolossal.com/wp-content/uploads/2018/04/agif4opt.gif');*/
+		/*background-image:url('https://thumbs.gfycat.com/ImperfectOfficialBarebirdbat-max-1mb.gif');*/
+    background-size:100%;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+
+    height:100%;
+    width:100%;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -122,7 +127,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: #585858;
+		color: #ffffff;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -2590,6 +2595,7 @@ input, select, textarea {
 			position: relative;
 			width: calc(33.33333% - 2.5em);
 			margin: 2.5em 0 0 2.5em;
+			/*opacity: 0.2;*/
 		}
 
 			.tiles article > .image {
