--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2608,6 +2608,7 @@ input, select, textarea {
 				width: 100%;
 				border-radius: 4px;
 				overflow: hidden;
+				opacity: 0.4;
 			}
 
 				.tiles article > .image img {
