--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2005,7 +2005,7 @@ input, select, textarea {
 				-ms-flex-direction: column;
 				flex-direction: column;
 				margin-left: 0;
-				width: 100% !important;
+				width: 200% !important;
 			}
 
 				ul.actions:not(.fixed) li {
@@ -2541,6 +2541,7 @@ input, select, textarea {
 			box-shadow: none;
 			background-color: #585858;
 			color: #ffffff !important;
+			opacity: 1;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2549,6 +2550,7 @@ input, select, textarea {
 			button.primary:hover,
 			.button.primary:hover {
 				background-color: #f2849e;
+				opacity: 1;
 			}
 
 			input[type="submit"].primary:active,
@@ -2557,6 +2559,7 @@ input, select, textarea {
 			button.primary:active,
 			.button.primary:active {
 				background-color: #ee5f81;
+				opacity: 1;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
