--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2464,10 +2464,10 @@ input, select, textarea {
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		background-color: transparent;
-		border-radius: 4px;
+		border-radius: 7px;
 		border: 0;
 		box-shadow: inset 0 0 0 2px #585858;
-		color: #585858 !important;
+		color: #e6e6e6 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -2558,7 +2558,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #ee5f81;
+				background-color: #ffffff;
 				opacity: 1;
 			}
 
