--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,11 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
+.bottom_padding {
+	padding: 0px 0px 10px 0px;
+	border-radius: 10%;
+}
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
@@ -2871,8 +2876,8 @@ input, select, textarea {
 
 				#header .logo .symbol img {
 					display: block;
-					width: 2em;
-					height: 2em;
+					width: 3.5em;
+					height: 3.5em;
 				}
 
 		#header nav {
