--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2325,6 +2325,66 @@ input, select, textarea {
 		}
 
 /* Image */
+  .imagetemp {
+		border-radius: 4px;
+		border: 0;
+		display: inline-block;
+		position: relative;
+	}
+
+	.imagetemp img {
+		border-radius: 4px;
+		display: block;
+	}
+
+	.imagetemp.left, .imagetemp.right {
+		max-width: 40%;
+	}
+
+		.imagetemp.left img, .imagetemp.right img {
+			width: 100%;
+		}
+
+	.imagetemp.left {
+		float: left;
+		padding: 0 1.5em 1em 0;
+		top: 0.25em;
+	}
+
+	.imagetemp.right {
+		float: right;
+		padding: 0 0 1em 1.5em;
+		top: 0.25em;
+	}
+
+	.imagetemp.fit {
+		display: block;
+		margin: 0 0 2em 0;
+		width: 100%;
+	}
+
+		.imagetemp.fit img {
+			width: 100%;
+		}
+
+	.imagetemp.main {
+		display: block;
+		margin: 0 0 0 0;
+		width: 100%;
+	}
+
+		.imagetemp.main img {
+			width: 100%;
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.imagetemp.main {
+				margin: 0 0 2em 0;
+			}
+
+		}
+
 
 	.image {
 		border-radius: 4px;
