--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,17 +105,20 @@ input, select, textarea {
 
 	body {
 		background: #000000;
-		background-image:url('https://www.thisiscolossal.com/wp-content/uploads/2018/04/agif2opt.gif');
+		/*background-image:url('https://www.thisiscolossal.com/wp-content/uploads/2018/04/agif2opt.gif');
+		*/
+		background-image: url("../../images/chaotic_sphere.gif");
 
 		/*background-image:url('https://www.thisiscolossal.com/wp-content/uploads/2018/04/agif3opt.gif');*/
 		/*background-image:url('https://www.thisiscolossal.com/wp-content/uploads/2018/04/agif4opt.gif');*/
 		/*background-image:url('https://thumbs.gfycat.com/ImperfectOfficialBarebirdbat-max-1mb.gif');*/
     background-size:100%;
     background-repeat: repeat-y;
-    background-attachment: fixed;
+    background-attachment: fixed;*/
 
     height:100%;
     width:100%;
+		
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
