--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,18 @@ section, summary, time, mark, audio, video {
 	border-radius: 10%;
 }
 
+.navbar {
+	overflow: hidden;
+  background-color: #000000;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+	padding-top: 1.5em;
+	
+}
+
+
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
@@ -118,7 +130,7 @@ input, select, textarea {
 
     height:100%;
     width:100%;
-		
+
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -170,7 +182,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #f2849e !important;
+			color: #ff8a00 !important;
 		}
 
 	strong, b {
@@ -1875,8 +1887,8 @@ input, select, textarea {
 			}
 
 			.icon.style2:hover {
-				color: #f2849e;
-				border-color: #f2849e;
+				color: #ff8a00;
+				border-color: #ff8a00;
 			}
 
 			.icon.style2:active {
@@ -2573,8 +2585,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #f2849e !important;
-			box-shadow: inset 0 0 0 2px #f2849e;
+			color: #ff8a00 !important;
+			box-shadow: inset 0 0 0 2px #ff8a00;
 		}
 
 		input[type="submit"]:active,
@@ -2617,7 +2629,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #f2849e;
+				background-color: #ff8a00;
 				opacity: 1;
 			}
 
@@ -2826,7 +2838,7 @@ input, select, textarea {
 				}
 
 				body:not(.is-touch) .tiles article:hover > .image:after {
-					opacity: 0;
+					opacity: 0.8;
 				}
 
 			body:not(.is-touch) .tiles article:hover .content {
@@ -2910,6 +2922,98 @@ input, select, textarea {
 
 		}
 
+/* Project tiles  */
+
+.card {
+
+  width: 100%;
+  /*min-width: 100px;*/
+  height: 20em;
+  background: #17141d;
+  border-radius: 16px;
+  padding: 1rem 1.5rem;
+  box-shadow: -1rem 0 3rem #000;
+  box-sizing: border-box;
+  /*display: flex;*/
+  /*flex-direction: column;*/
+	/*background-image: url("../../images/Lorenz_attractor_test.png");*/
+  justify-content: space-between;
+  cursor: pointer;
+  transition: 0.2s;
+  margin: 30px;
+}
+
+.main-link:hover {
+  transform: translateY(-10px);
+}
+.main-link:hover h2 {
+  color: #ff8a00;
+	background-blend-mode: darken;
+}
+.main-link:focus-within {
+  box-shadow: 0 0 0 0.25rem;
+}
+.main-link:focus-within a:focus {
+  text-decoration: none;
+}
+
+h2,
+a,
+p,
+span {
+  color: #fff;
+}
+
+a {
+  text-decoration: none;
+  transition: 0.2s;
+}
+a:hover, a:focus {
+  color: #ff8a00;
+  outline: none;
+}
+
+time {
+  color: grey;
+}
+
+.author-name {
+  display: flex;
+  align-items: center;
+}
+.author-name img {
+  height: 36px;
+  margin-right: 10px;
+  border-radius: 50%;
+}
+
+.tags {
+  display: flex;
+  margin: 10px 0;
+}
+.tags .tag {
+  padding: 5px 10px;
+  border: solid 1px grey;
+  border-radius: 3px;
+  transition: 0.2s;
+}
+.tags .tag + .tag {
+  margin-left: 10px;
+}
+
+.card_background_test {
+	background-image: url("../../images/Lorenz_attractor_test.png");
+	background-position: center;
+	background-size: cover;
+	backdrop-filter: brightness(30%);
+}
+
+.card_background_01_melanomaScan {
+	background-image: url("../../images/melanoma_scan_card_img.png");
+	background-position: center;
+	background-size: cover;
+}
+
 /* Header */
 
 	#header {
@@ -2939,8 +3043,8 @@ input, select, textarea {
 
 				#header .logo .symbol img {
 					display: block;
-					width: 3.5em;
-					height: 3.5em;
+					width: 4em;
+					height: 4em;
 				}
 
 		#header nav {
