--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3037,6 +3037,12 @@ time {
 	background-size: cover;
 }
 
+.card_background_01_vitaSanare {
+	background-image: url("../../images/vita_sanare_card_img.png");
+	background-position: center;
+	background-size: cover;
+}
+
 /* Header */
 
 	#header {
